the to date in performance evaluation request was unique in db was fixed.now can put request

--- a/src/main/resources/templates/employee/addEmployee.html
+++ b/src/main/resources/templates/employee/addEmployee.html
@@ -8,7 +8,7 @@
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}" ></nav >
 
 
-<div class="container " >
+<div class="container-fluid form-Border" >
   <div class="row text-center " >
     <div class="col" >
       <a class="btn btn-outline-info" href="/home" >
@@ -38,7 +38,6 @@
     <form id="form" class="form-horizontal" data-th-action="${addStatus==true?'/employee/save':'/employee/update'}"
           data-th-object="${employee}" method="POST" enctype="multipart/form-data" >
       <div class="row" >
-        <!--Left Side-->
         <div class="form-group col-md-6 col-sm-6 text-left flex-column" >
           <!--Id-->
           <div id="idStatus" data-th-if="${addStatus==false}" class="form-row text-right" >
@@ -81,7 +80,9 @@
           <!--First Name -->
           <div class="form-row text-right" >
             <div class="col-md-4" >
+              <div class="required">
               <label class="control-label" for="name" > Name :</label >
+              </div>
             </div >
             <div class="col-md-8" >
               <input id="name" data-th-field="*{name}" class="form-control" tabindex="4" type="text" required />
@@ -104,7 +105,9 @@
           <!--W&OP Number-->
           <div class="form-row text-right" >
             <div class="col-md-4" >
+              <div class="required">
               <label class="control-label" for="wopNumber" >W&OP Number :</label >
+              </div>
             </div >
             <div class="col-md-8" >
               <input id="wopNumber" data-th-field="*{wopNumber}" class="form-control" tabindex="5"
@@ -116,7 +119,9 @@
           <!--Nic-->
           <div class="form-row text-right" >
             <div class="col-md-4" >
+              <div class="required">
               <label class="control-label" for="nic" >NIC No :</label >
+              </div>
             </div >
             <div class="col-md-8" >
               <input id="nic" data-th-field="*{nic}" class="form-control" tabindex="6" type="text"
@@ -129,7 +134,9 @@
           <!--Gender-->
           <div class="form-row text-right" >
             <div class="col-md-4" >
+              <div class="required">
               <label class="control-label" for="gender" >Gender :</label >
+              </div>
             </div >
             <div class="col-md-8" >
               <div class="custom-control custom-checkbox custom-control-inline "
@@ -149,7 +156,9 @@
           <!--Date of birth-->
           <div class="form-row text-right" >
             <div class="col-md-4" >
+              <div class="required">
               <label class="control-label" for="dateOfBirth" >Date of birth :</label >
+              </div>
             </div >
             <div class="col-md-8" >
               <input id="dateOfBirth" data-th-field="*{dateOfBirth}" class="form-control" tabindex="8"
@@ -189,7 +198,9 @@
           <!--Designation-->
           <div class="form-row text-right" >
             <div class="col-md-4" >
+              <div class="required">
               <label class="control-label" for="designation" >Designation :</label >
+              </div>
             </div >
             <div class="col-md-8" >
               <select id="designation" data-th-field="*{designation}" class="form-control" tabindex="10"
@@ -207,7 +218,9 @@
           <!--Civil status-->
           <div class="form-row text-right" >
             <div class="col-md-4" >
+              <div class="required">
               <label class="control-label" for="civilStatus" >Civil State :</label >
+              </div>
             </div >
             <div class="col-md-8" >
               <select data-th-field="*{civilStatus}" id="civilStatus" class="form-control" tabindex="11"
@@ -222,7 +235,9 @@
           <!--Address-->
           <div class="form-row text-right" >
             <div class="col-md-4" >
+              <div class="required">
               <label class="control-label" for="address" >Address :</label >
+              </div>
             </div >
             <div class="col-md-8" >
                             <textarea id="address" data-th-field="*{address}" class="form-control" tabindex="12"
@@ -234,7 +249,9 @@
           <!--Mobile Number One-->
           <div class="form-row text-right" >
             <div class="col-md-4" >
+              <div class="required">
               <label class="control-label" for="mobileOne" >Mobile One :</label >
+              </div>
             </div >
             <div class="col-md-8" >
               <input id="mobileOne" data-th-field="*{mobileOne}" class="form-control mobile" tabindex="13"
@@ -276,7 +293,9 @@
           <!--Office email-->
           <div class="form-row text-right" >
             <div class="col-md-4" >
+              <div class="required">
               <label class="control-label" for="officeEmail" >Office Email :</label >
+              </div>
             </div >
             <div class="col-md-8" >
               <input id="officeEmail" data-th-field="*{officeEmail}" class="form-control" tabindex="17"
@@ -289,7 +308,9 @@
           <!--Date of assignment-->
           <div class="form-row text-right" >
             <div class="col-md-4" >
+              <div class="required">
               <label class="control-label" for="dateOfAssignment" >Date Of Assignment :</label >
+              </div>
             </div >
             <div class="col-md-8" >
               <input id="dateOfAssignment" data-th-field="*{{dateOfAssignment}}" type="date"
@@ -302,7 +323,9 @@
           <!--Employee status-->
           <div class="form-row text-right" data-th-if="${addStatus==false}">
             <div class="col-md-4" >
+              <div class="required">
               <label class="control-label" for="employeeStatus" >Employee Status :</label >
+              </div>
             </div >
             <div class="col-md-8" >
               <select id="employeeStatus" data-th-field="*{employeeStatus}" class="form-control" tabindex="19"
@@ -317,6 +340,7 @@
           <!--Working Place-->
           <div class="form-row text-right" >
             <div class="col-md-4" >
+
               <label class="control-label" for="institute" >Institute :</label >
             </div >
             <div class="col-md-8" >
@@ -332,7 +356,9 @@
           <!--supervisor-->
           <div class="form-row text-right" >
             <div class="col-md-4" >
+              <div class="required">
               <label class="control-label" for="supervisor" >Employee Supervisor :</label >
+              </div>
             </div >
             <div class="col-md-8" >
               <select id="supervisor" data-th-field="*{supervisor}" class="form-control" tabindex="19"
@@ -404,7 +430,10 @@
           </ul >
         </div >
       </div >
-    </form >
+        </div>
+      </div>
+      <span class="required_notification">* Denotes Required Field</span>
+      </form >
   </div >
 </div >
 <!--footer include-->
