--- a/src/main/resources/templates/employeeLeave/addEmployeeLeave.html
+++ b/src/main/resources/templates/employeeLeave/addEmployeeLeave.html
@@ -100,7 +100,7 @@
                    data-th-field="*{startAt}" id="startAt" required >
 
             <span data-th-errors="*{startAt}"
-                  data-th-if="${#fields.hasErrors('startAt')}" class="error" >Error Employee code
+                  data-th-if="${#fields.hasErrors('startAt')}" class="error" >Error Date code
                             </span >
           </div >
         </div >
@@ -114,7 +114,7 @@
                    data-th-field="*{endAt}" id="endAt"  >
 
             <span data-th-errors="*{endAt}"
-                  data-th-if="${#fields.hasErrors('endAt')}" class="error" >Error Employee code
+                  data-th-if="${#fields.hasErrors('endAt')}" class="error" >Error Date code
                             </span >
           </div >
         </div >
