--- a/src/main/resources/templates/censure/addCensure.html
+++ b/src/main/resources/templates/censure/addCensure.html
@@ -298,7 +298,7 @@
         });
     });
 
-    /*<!--Date validation-->
+    <!--Date validation-->
 
     $(document).ready(function () {
       let assignDate = $("#assignDate").val() + `T00:00:00`;
@@ -321,7 +321,10 @@
       } else {
         $(`#incidentDate`).attr('min', nextDateString);
       }
-    });*/
+    });
+
+
+
 </script >
 </body >
 </html >
