--- a/src/main/resources/templates/censure/censure.html
+++ b/src/main/resources/templates/censure/censure.html
@@ -27,7 +27,7 @@
     <div class="col" >
       <h4 class="text-info text-center" >
         <strong >
-          Employee Censure Management
+           Censure Management
         </strong >
       </h4 >
     </div >
