--- a/src/main/resources/templates/employeeLeave/employeeLeave.html
+++ b/src/main/resources/templates/employeeLeave/employeeLeave.html
@@ -73,8 +73,9 @@
         <span aria-hidden="true" >&times;</span >
       </button >
       <h3 class="text-center text-danger" >
-        <strong >There is no qualification upto know please add qualification to the system
-                 using add qualification button.
+        <strong >There is no
+          leaves upto know please add leaves to the system
+                 using add leaves button.
         </strong >
       </h3 >
     </div >
