--- a/src/main/resources/templates/performanceEvaluation/performanceEvaluation.html
+++ b/src/main/resources/templates/performanceEvaluation/performanceEvaluation.html
@@ -26,7 +26,7 @@
     <div class="col" >
       <h4 class="text-info text-center" >
         <strong >
-          Performance Evaluation Requested Employee Management
+          Performance Evaluation Approval  Management
         </strong >
       </h4 >
     </div >
@@ -84,8 +84,8 @@
           <span aria-hidden="true" >&times;</span >
         </button >
         <h3 class="text-center text-danger" >
-          <strong >There is no employee upto now please add employee to the system
-                   using add user button.
+          <strong >There is no Performance Evaluations to be Approved  upto now.
+
           </strong >
         </h3 >
       </div >
