--- a/src/main/resources/templates/commendation/addCommendation.html
+++ b/src/main/resources/templates/commendation/addCommendation.html
@@ -84,7 +84,9 @@
 
         <div class="form-row text-right" >
           <div class="col-md-4" >
+            <div class="required">
             <label class="control-label" data-th-for="${'description'}" >Description :</label >
+            </div>
           </div >
           <div class="col-md-4" >
             <textarea class="form-control" data-th-field="*{description}" required rows="4" ></textarea >
@@ -152,6 +154,7 @@
         </div >
 
       </form >
+      <span class="required_notification">* Denotes Required Field</span>
     </div >
   </div >
 </div >
