--- a/src/main/resources/templates/employeeInstitute/addEmployeeInstitute.html
+++ b/src/main/resources/templates/employeeInstitute/addEmployeeInstitute.html
@@ -63,7 +63,9 @@
       <!--Institute -->
       <div class="form-row text-right" >
         <div class="col-md-4" >
+          <div class="required">
           <label class="control-label" for="institute" >Institute :</label >
+          </div>
         </div >
         <div class="col-md-8" >
           <select id="institute" data-th-field="*{institute}" class="form-control" tabindex="19"
@@ -78,7 +80,9 @@
       <!--supervisor-->
       <div class="form-row text-right" >
         <div class="col-md-4" >
+          <div class="required">
           <label class="control-label" for="supervisor" >Employee Supervisor :</label >
+          </div>
         </div >
         <div class="col-md-8" >
           <select id="supervisor" data-th-field="*{supervisor}" class="form-control" tabindex="19"
@@ -109,7 +113,9 @@
       <!--end At-->
       <div class="form-row text-right" >
         <div class="col-md-4" >
+          <div class="required">
           <label class="control-label" for="endAt" >New Institute Start At :</label >
+          </div>
         </div >
         <div class="col-md-8" >
           <input type="date" class="form-control " onchange="dateMatch()"
@@ -123,7 +129,9 @@
       <!--Change reason-->
       <div class="form-row text-right" >
         <div class="col-md-4" >
+          <div class="required">
           <label class="control-label" for="employeeStatus" >Change Reason :</label >
+          </div>
         </div >
         <div class="col-md-8" >
           <select id="employeeStatus" data-th-field="*{instituteChangeReason}" class="form-control" tabindex="19"
