--- a/src/main/resources/templates/institute/addInstitute.html
+++ b/src/main/resources/templates/institute/addInstitute.html
@@ -55,7 +55,9 @@
                     <!--Main Institute -->
                     <div class="form-row text-right">
                         <div class="col-md-4">
+                            <div class="required">
                             <label class="control-label" for="mainInstitute">Prison Type :</label>
+                            </div>
                         </div>
                         <div class="col-md-4">
                             <select class="form-control" data-th-field="*{prisonType}" id="mainInstitute" required
@@ -70,7 +72,9 @@
                     <!--Name-->
                     <div class="form-row text-right">
                         <div class="col-md-4">
+                            <div class="required">
                             <label class="control-label" data-th-for="${'name'}">Name :</label>
+                            </div>
                         </div>
                         <div class="col-md-4">
                             <input class="form-control" data-th-field="*{name}" required tabindex="4" type="text"/>
@@ -81,7 +85,9 @@
                     <!--Land-->
                     <div class="form-row text-right">
                         <div class="col-md-4">
+                            <div class="required">
                             <label class="control-label"  data-th-for="${'name'}">Land :</label>
+                            </div>
                         </div>
                         <div class="col-md-4">
                             <input class="form-control" data-th-field="*{land}" required tabindex="4" type="tel"
@@ -104,7 +110,9 @@
                     <!--address-->
                     <div class="form-row text-right">
                         <div class="col-md-4">
+                            <div class="required">
                             <label class="control-label" data-th-for="${'address'}">Address :</label>
+                            </div>
                         </div>
                         <div class="col-md-4">
                             <textarea class="form-control" data-th-field="*{address}"></textarea>
@@ -135,7 +143,7 @@
                     </ul>
                 </div>
             </div>
-
+            <span class="required_notification">* Denotes Required Field</span>
         </form>
     </div>
 </div>
