add censure was valid

--- a/src/main/resources/templates/censure/addCensure.html
+++ b/src/main/resources/templates/censure/addCensure.html
@@ -311,9 +311,9 @@
     <!--Date validation-->
 
     $(document).ready(function () {
-      let assignDate = $("#assignDate").val();
+      let assignDate = new Date();
       let currentYear = new Date().getFullYear();
-      $(`#incidentDate`).attr('min', `${currentYear}-01-01`).attr('max', `${currentYear}-12-31`);
+      $(`#incidentDate`).attr('min', `${currentYear}-01-01`).attr('max', assignDate);
 
     });
 
