employee.html ui was fixed

--- a/src/main/resources/templates/employee/employee-detail.html
+++ b/src/main/resources/templates/employee/employee-detail.html
@@ -8,7 +8,7 @@
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}" ></nav >
 
 <!--heading Area-->
-<div class="container-fluid " >
+<div class="container-fluid form-Border" >
   <div class="row text-center " >
     <div class="col" >
       <a data-th-if="${!#authorization.expression('hasRole(''ROLE_USER'')')}" class="btn btn-outline-info" href="/home" >&nbsp; Back To Home
