--- a/src/main/resources/templates/employeeLeave/employeeLeave.html
+++ b/src/main/resources/templates/employeeLeave/employeeLeave.html
@@ -41,7 +41,7 @@
       <th >Employee Leave Start At</th >
       <th >Employee Leave End At</th >
       <th > Leave Duration</th >
-      <th >Modify</th >
+      <!--<th >Modify</th >-->
     </tr >
     </thead >
     <tbody >
@@ -51,7 +51,7 @@
       <th data-th-text="${{employeeLeave.startAt}}" ></th >
       <th data-th-text="${{employeeLeave.endAt}}" ></th >
       <th ><span data-th-text="${employeeLeave.dayCount +' Day '+ employeeLeave.hourCount+' Hour'}" ></span ></th >
-      <th >
+      <!--<th >
         <a class="btn btn-primary btn-sm"
            data-th-href="${'/qualification/edit/' + employeeLeave.id}" ><i
               class="fa fa-edit" ></i >&nbsp;Edit</a >
@@ -61,7 +61,7 @@
               aria-hidden="true" class="fa fa-trash" ></i >
           Delete</a >
 
-      </th >
+      </th >-->
     </tr >
     </tbody >
   </table >
