--- a/src/main/resources/templates/institute/institute-detail.html
+++ b/src/main/resources/templates/institute/institute-detail.html
@@ -91,7 +91,7 @@
     </div>
     <!--Back Button-->
     <div class="form-group col-md-12 col-sm-12 text-center flex-column ">
-        <a href="/punishment">
+        <a href="/institute">
             <button class="btn btn-dark" type="button" tabindex="10">
                 <i class="fas fa-arrow-circle-left" style="font-size: 20px"></i>&nbsp; &nbsp;Back
             </button>
